<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">surespot</string>
    <string name="friends">friends</string>
    <string name="menu_settings">settings</string>
    <string name="username_label">username:</string>
    <string name="password_label">password:</string>
    <string name="title_activity_main">surespot</string>
    <string name="title_activity_signup">signup</string>
    <string name="title_activity_friends">friends</string>
    <string name="title_activity_notifications">notifications</string>
    <string name="export_sd">Execute Device Storage Backup</string>
    <string name="import_sd">Restore from Device Storage</string>
    <string name="title_activity_chat">chat</string>
    <string name="title_activity_image_view">image view</string>
    <string name="title_activity_image_select">image select</string>
    <string name="title_activity_identity_management">identity management</string>
    <string name="title_activity_settings">settings</string>
    <string name="title_activity_export_identity">backup identity</string>
    <string name="import_identity_label">restore identity...</string>
    <string name="export_identity_label">backup identity...</string>
    <string name="delete_identity_user">delete identity: %s</string>
    <string name="remove_identity_user">remove identity: %s</string>
    <string name="import_identities">restore identity...</string>
    <string name="create_identity_label">create new identity...</string>
    <string name="no_identity_exported">no identity backed up</string>
    <string name="no_identity_imported">no identity restored</string>
    <string name="no_identity_deleted">no identity deleted</string>
    <string name="no_identity_removed">no identity removed</string>
    <string name="identity_imported_successfully">identity %s restored successfully</string>
    <string name="could_not_import_identity">could not restore identity</string>
    <string name="could_not_restore_identity_name">could not restore identity %s</string>
    <string name="notifications_title">push notifications</string>
    <string name="notifications_vibration">vibration</string>
    <string name="notifications_sound">sound</string>
    <string name="notifications_led">led</string>
    <string name="notifications_enabled">enabled</string>
    <string name="camera_init">initializing camera</string>
    <string name="uploading_image">uploading image</string>
    <string name="could_not_upload_image">could not upload image</string>
    <string name="image_successfully_uploaded">image successfully uploaded</string>
    <string name="select_image">select image</string>
    <string name="capture_image">capture image</string>
    <string name="assign_image">assign image</string>
    <string name="logout">log out</string>
    <string name="settings">settings</string>
    <string name="welcome_to_surespot"><![CDATA["Welcome to surespot! Data sent using this app is <a href="https://en.wikipedia.org/wiki/End-to-end_encryption">end-to-end</a> encrypted with <a href="https://en.wikipedia.org/wiki/Symmetric-key_algorithm">symmetric-key</a> encryption (<a href="https://en.wikipedia.org/wiki/Advanced_Encryption_Standard">256 bit AES-GCM</a>) using keys created with 521 bit <a href="https://en.wikipedia.org/wiki/Elliptic_curve_Diffie-Hellman">ECDH shared secret derivation</a>."]]></string>
    <string name="no_friends">"No friends...yet. Invite surespot users by entering their username below."</string>
    <string name="help_invite">"Invite surespot users by entering their username on the home tab."</string>
    <string name="navigate_between_chat_tabs">Navigate between tabs by swiping.</string>
    <string name="help_holdmessage">Hold on a message for message options.</string>
    <string name="help_holdfriend">Hold on a friend for friend options.</string>
    <string name="help_imageZoom">Zoom images by touching the image.</string>
    <string name="incorrect_password_or_key">incorrect password or key</string>
    <string name="cannot_change_to_same_password">Your new password must be different than your old one</string>
    <string name="no_such_user">no such user</string>
    <string name="roll_keys">generate new key pairs</string>
    <string name="key_management">generate new key pairs...</string>
    <string name="regenerate_keys">generate new key pairs</string>
    <string name="could_not_create_new_keys">could not create new key pairs</string>
    <string name="keys_created">new keys successfully created, please backup the identity</string>
    <string name="close_tab">close tab</string>
    <string name="action_settings">Settings</string>
    <string name="no_messages">no messages</string>
    <string name="delete_message">delete message</string>
    <string name="block_underline"><u>block</u></string>
    <string name="ignore_underline"><u>ignore</u></string>
    <string name="accept_underline"><u>accept</u></string>
    <string name="crash_toast_text">houston we have a problem</string>
    <string name="crash_dialog_title">surespot has crashed</string>
    <string name="crash_dialog_text">We must confess that an unexpected error has occurred.\n\nPlease help us to fix the issue by touching OK to send an error report containing no personally identifying information.</string>
    <string name="crash_dialog_comment_prompt">You can add your comments about the problem below if you like:</string>
    <string name="crash_dialog_ok_toast">Thank you!</string>
    <string name="external_invite_message">"I'd like to chat with you privately via surespot. Click %s to install the app and invite me as a friend."</string>
    <string name="help_backupIdentities1">"Because surespot uses encryption keys that are never uploaded to our servers, if you lose your phone, or uninstall then re-install the app, or wipe the app's data, you will not be able to login unless you have backed up your identity."</string>
    <string name="help_backupIdentities2">"Surespot can use Google Drive and/or Device Storage for backing up your identity. These options are in the identity management settings."</string>
    <string name="help_backup_what"><![CDATA["This will export a copy of the selected identity encrypted with <a href="http://www.eetimes.com/design/embedded-internet-design/4372428/How-secure-is-AES-against-brute-force-attacks-">256 bit AES-GCM</a> with a key derived from your password through a <a href="https://en.wikipedia.org/wiki/PBKDF2">PBKDF</a> (Password Based Key Derivation Function)"]]></string>
    <string name="help_backup_local">"For maximum security we recommend using Device Storage backup. Once backed up, the identity file should then be copied (or moved) from your device to a secure location so that it may be restored in the case of app uninstall or 'clear data', a lost or stolen device, or other data loss."</string>
    <string name="help_messageHistory">Surespot has a 1000 message history. Once you reach 1000 messages your oldest message will be deleted so you will only ever have 1000 (encrypted) messages stored on the server. Of course you can delete any and all of your messages at any time.</string>
    <string name="login">log in</string>
    <string name="create">create</string>
    <string name="password">password</string>
    <string name="select_identity">select identity</string>
    <string name="current_password">current password</string>
    <string name="new_password">new password</string>
    <string name="confirm_password">confirm password</string>
    <string name="change_password">change password</string>
    <string name="username">username</string>
    <string name="options">options</string>
    <string name="clear_local_cache">clear local cache</string>
    <string name="delete_all_messages">delete all messages</string>
    <string name="pay_what_you_like">pay what you like</string>
    <string name="pref_title_about_surespot">about surespot</string>
    <string name="pref_title_help">help</string>
    <string name="pref_title_delete_message">delete message</string>
    <string name="pref_title_delete_all_messages">delete all messages</string>
    <string name="pref_title_identity_management">identity management</string>
    <string name="pref_title_change_password">change password...</string>
    <string name="pref_title_message_debug_mode">message debug mode</string>
    <string name="pref_title_options">identity options</string>
    <string name="pref_summary_delete_message">confirm before deleting a message</string>
    <string name="pref_summary_delete_all_messages">confirm before deleting all messages</string>
    <string name="pref_summary_export_identity">Backup your identity to Device Storage or Google Drive.</string>
    <string name="pref_summary_import_identity">Restore your identity from Device Storage or Google Drive.</string>
    <string name="pref_summary_delete_identity">Deleting an identity cannot be undone.</string>
    <string name="pref_summary_remove_identity_from_device">Removing an identity from a device retains the identity on other devices.</string>
    <string name="pref_summary_regen_keys">For the paranoid.</string>
    <string name="pref_summary_message_debug_mode">Shows more information about messages for debugging purposes.</string>
    <string name="pref_title_delete_identity">delete identity...</string>
    <string name="pref_title_remove_identity_from_device">remove identity from device...</string>
    <string name="remove_identity_from_device">remove identity from device</string>
    <string name="menu_import">import</string>
    <string name="menu_remove">remove identity</string>
    <string name="about">about...</string>
    <string name="voice_messaging_purchase_1"><![CDATA["Add voice messaging to your surespot and make encrypted communication even easier! Simply hold down the microphone button to record and release to send. Because sometimes it is easier to say it than type it. <a href="http://youtu.be/3mifzH1DXDk">Video demonstration</a>."]]></string>
    <string name="voice_messaging_purchase_button">"touch here to buy for $1.99"</string>
    <string name="voice_message_suppress_purchase_ask">"don't ask me again"</string>
    <string name="pref_suppress_voice_purchase_ask_title">"don't ask me again"</string>
    <string name="pref_suppress_voice_purchase_ask_summary">"stop asking me to purchase voice messaging capability"</string>
    <string name="menu_purchase_voice_messaging">"purchase voice"</string>
    <string name="voice_help_1">Hold down the microphone button to record a voice message, release the button to send.</string>
    <string name="voice_help_2">To cancel the recording drag away from button and release.</string>
    <string name="voice_help_3">Touch on a voice message to play, touch again to stop.</string>
    <string name="voice_help_4">New voice messages will play automatically for the open chat tab.</string>
    <string name="close">close</string>
    <string name="pref_title_background_image_select">select a background image</string>
    <string name="share_invite_link">share invite link</string>
    <string name="share_link_help">"Use the 'share invite link' menu option to share a link via email, sms, twitter, or other social media, that when clicked will install surespot / invite you as a friend in surespot"</string>
    <string name="pref_stop_cache_logout_title">kill cache on logout</string>
    <string name="pref_stop_cache_logout_summary">kills the cache service on logout</string>
    <string name="pref_title_global_options">global options</string>
    <string name="store_password_in_keychain">store password in keychain</string>
    <string name="pref_title_enable_keystore">keychain enabled</string>
    <string name="pref_summary_enable_keystore">enable by electing to save password on login screen</string>
</resources>