<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

 

    <PreferenceScreen android:title="@string/pref_title_identity_management" >
        <Preference android:title="@string/pref_title_change_password" >
            <intent android:action="com.twofours.surespot.identity.ChangePasswordActivity" >
            </intent>
        </Preference>
        <Preference
            android:summary="@string/pref_summary_export_identity"
            android:title="@string/export_identity_label" >
            <intent android:action="com.twofours.surespot.backup.ExportIdentityActivity" >
            </intent>
        </Preference>
        <Preference
            android:key="pref_import_identity"
            android:summary="@string/pref_summary_import_identity"
            android:title="@string/import_identity_label" >
            <intent android:action="com.twofours.surespot.backup.ImportIdentityActivity" >
            </intent>
        </Preference>
        <Preference
            android:summary="@string/pref_summary_delete_identity"
            android:title="@string/pref_title_delete_identity" >
            <intent android:action="com.twofours.surespot.identity.DeleteIdentityActivity" >
            </intent>
        </Preference>
        <Preference
            android:summary="@string/pref_summary_remove_identity_from_device"
            android:title="@string/pref_title_remove_identity_from_device" >
            <intent android:action="com.twofours.surespot.identity.RemoveIdentityFromDeviceActivity" >
            </intent>
        </Preference>
        <Preference
            android:summary="@string/pref_summary_regen_keys"
            android:title="@string/key_management" >
            <intent android:action="com.twofours.surespot.activities.ManageKeysActivity" >
            </intent>
        </Preference>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/pref_title_options" >
        <Preference
            android:key="pref_background_image"
            android:title="@string/pref_title_background_image_select" />

        <PreferenceScreen android:title="@string/notifications_title" >
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_notifications_enabled"
                android:title="@string/notifications_enabled" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:dependency="pref_notifications_enabled"
                android:key="pref_notifications_sound"
                android:title="@string/notifications_sound" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:dependency="pref_notifications_enabled"
                android:key="pref_notifications_vibration"
                android:title="@string/notifications_vibration" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:dependency="pref_notifications_enabled"
                android:key="pref_notifications_led"
                android:title="@string/notifications_led" />
        </PreferenceScreen>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_delete_message"
            android:summary="@string/pref_summary_delete_message"
            android:title="@string/pref_title_delete_message" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_delete_all_messages"
            android:summary="@string/pref_summary_delete_all_messages"
            android:title="@string/pref_title_delete_all_messages" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_suppress_voice_purchase_ask"
            android:summary="@string/pref_suppress_voice_purchase_ask_summary"
            android:title="@string/pref_suppress_voice_purchase_ask_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_debug_mode"
            android:summary="@string/pref_summary_message_debug_mode"
            android:title="@string/pref_title_message_debug_mode" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/pref_title_global_options" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_enable_keystore_control"
            android:summary="@string/pref_summary_enable_keystore"
            android:title="@string/pref_title_enable_keystore" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_stop_cache_logout_control"
            android:summary="@string/pref_stop_cache_logout_summary"
            android:title="@string/pref_stop_cache_logout_title" />
    </PreferenceScreen>
    <Preference
        android:key="pref_help"
        android:title="@string/pref_title_help" >
    </Preference>
   <Preference android:title="@string/pref_title_about_surespot" >
        <intent android:action="com.twofours.surespot.activities.AboutActivity" >
        </intent>
    </Preference>
    
</PreferenceScreen>