<menu xmlns:android="http://schemas.android.com/apk/res/android">




    <item
        android:id="@+id/menu_create_identity_bar"
        android:icon="@drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/create_identity_label"
        android:titleCondensed="@string/create" />
    <item
        android:id="@+id/menu_import_identities_bar"
        android:icon="@drawable/ic_menu_archive"
        android:orderInCategory="200"
        android:title="@string/import_identities"
        android:titleCondensed="@string/menu_import" />
    <item
        android:id="@+id/menu_remove_identity_bar"
        android:icon="@drawable/ic_menu_delete"
        android:orderInCategory="300"
        android:title="@string/remove_identity_from_device"
        android:titleCondensed="@string/menu_remove" />
    <item
        android:id="@+id/clear_local_cache_bar"
        android:icon="@drawable/ic_menu_delete"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/clear_local_cache" />


</menu>