<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/item_overflow"
        android:icon="@drawable/ic_menu_overflow"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/options">
        <menu>
            <item
                android:id="@+id/menu_send_image_bar"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/select_image"/>
            <item
                android:id="@+id/menu_capture_image_bar"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/capture_image"/>
            <item
                android:id="@+id/menu_close_bar"
                android:icon="@drawable/ic_menu_end_conversation"
                android:title="@string/close_tab"/>
            <item
                android:id="@+id/menu_clear_messages"
                android:icon="@drawable/ic_menu_delete"
                android:title="@string/delete_all_messages"/>
            <item
                android:id="@+id/menu_invite_external"
                android:icon="@drawable/blue_heart"
                android:title="@string/share_invite_link"/>
            <item
                android:id="@+id/menu_purchase_voice"
                android:icon="@drawable/gold_heart"
                android:visible="false"
                android:title="@string/menu_purchase_voice_messaging"/>

            <!-- I told you before kid, paywhatyoulike -->

            <item
                android:id="@+id/menu_pwyl"
                android:icon="@drawable/heart"
                android:visible="false"
                android:title="@string/pay_what_you_like">
            </item>
            <item
                android:id="@+id/menu_settings_bar"
                android:icon="@drawable/ic_menu_preferences"
                android:title="@string/settings"/>
            <item
                android:id="@+id/menu_logout_bar"
                android:icon="@drawable/ic_lock_power_off"
                android:title="@string/logout"/>
        </menu>
    </item>

</menu>
