<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/item_overflow"
        android:icon="@drawable/ic_menu_overflow"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/options">
        <menu>
            <item
                android:id="@+id/menu_import_identities"
                android:icon="@drawable/ic_menu_archive"
                android:orderInCategory="100"
                android:showAsAction="always"
                android:title="@string/import_identities"/>
            <item
                android:id="@+id/menu_about"
                android:icon="@drawable/surespot_logo"
                android:orderInCategory="200"
                android:title="@string/about"/>
        </menu>
    </item>

</menu>