<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvPurchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/voice_messaging_purchase_1" >
    </TextView>

    <Button
        android:id="@+id/bPurchaseVoice"
        style="@style/Widget.Sherlock.ActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voice_messaging_purchase_button"
        android:textColor="@color/surespotBlue" >
    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <CheckBox
            android:id="@+id/cbDontShow"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"            
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/voice_message_suppress_purchase_ask"
            android:visibility="gone" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#aaa" />

    <Button
        android:id="@+id/bClose"
        style="@style/Widget.Sherlock.ActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:textColor="@color/surespotBlue" >
    </Button>

</LinearLayout>