<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".ChangePasswordActivity" >

        <TextView
            android:id="@+id/tvChangePasswordWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/changePasswordBackup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_identity" />

        <Spinner
            android:id="@+id/identitySpinner"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp" >
        </Spinner>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_password" />

        <EditText
            android:id="@+id/etChangePasswordCurrent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dip"
            android:text="@string/new_password" />

        <EditText
            android:id="@+id/etChangePasswordNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dip"
            android:text="@string/confirm_password" />

        <EditText
            android:id="@+id/etChangePasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/bChangePassword"
            style="@style/Widget.Sherlock.ActionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/change_password"
            android:textColor="@color/surespotBlue" >
        </Button>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#aaa" />
    </LinearLayout>

</ScrollView>